# robotik1-sim

./: CMakeLists.txt  EngineStub.cpp  EngineStub.hpp  MadgwickReplace.cpp  Parcour.hpp  Parser.cpp  Parser.hpp  README.md  Robot.cpp  Robot.hpp  Simulator.cpp  Visualization.cpp  Visualization.hpp  stepinfo.txt  stepsinfo.txt
sim/: Parcour.cpp  Parser.cpp  Simulator.cpp  Simulator.hpp  camera_stub.cpp  parcour.txt
